# fecot-platform

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_avatar_url.py
backend/app/: main.py
backend/app/api/: __init__.py  academies.py  athletes.py  auth.py  deps.py  graduation_requests.py  health.py
backend/app/core/: config.py  graduations.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  academy.py  academy_teacher.py  athlete.py  graduation_request.py
backend/app/schemas/: academy.py  athlete.py  graduation_request.py
backend/app/services/: avatar_storage.py
backend/scripts/: seed.py
backend/tests/: README.md  conftest.py  factories.py
backend/tests/integration/: test_academies.py  test_athletes_crud.py  test_athletes_list.py  test_auth.py  test_avatar.py  test_graduation_requests.py  test_self_edit.py  test_smoke.py
backend/tests/unit/: test_avatar_storage.py  test_graduations.py  test_security.py
docs/: README.md  constitution.md
docs/architecture/: api.md  data-model.md  overview.md  security.md
docs/decisions/: ADR-001-reescrita-fastapi-nextjs.md  ADR-002-modelo-unico-athlete-com-roles.md  ADR-003-graduacao-somente-via-fluxo-aprovacao.md  ADR-004-jwt-stateless-localstorage.md  ADR-005-cpf-como-senha-inicial.md  ADR-006-avatares-disco-local-webp.md  ADR-007-graduacoes-strings-canonicas.md  ADR-008-identidade-visual-verde-amarela.md  README.md  TEMPLATE.md
docs/specs/: 001-autenticacao-e-conta.md  002-gestao-de-atletas.md  003-gestao-de-academias.md  004-fluxo-de-graduacao.md  005-avatares.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/academias/: page.tsx
frontend/app/dashboard/academias/[id]/editar/: page.tsx
frontend/app/dashboard/academias/novo/: page.tsx
frontend/app/dashboard/atletas/: page.tsx
frontend/app/dashboard/atletas/[id]/editar/: page.tsx
frontend/app/dashboard/atletas/novo/: page.tsx
frontend/app/dashboard/graduacoes/: page.tsx
frontend/app/dashboard/graduacoes/nova/: page.tsx
frontend/app/login/: page.tsx
frontend/app/perfil/: page.tsx
frontend/app/recuperar-senha/: page.tsx
frontend/components/: about-section.tsx  academies-map.tsx  academies-table.tsx  academy-form.tsx  academy-location-picker.tsx  athlete-form.tsx  athletes-table.tsx  auth-layout.tsx  avatar-uploader.tsx  dashboard-header.tsx  dashboard-layout.tsx  dashboard-sidebar.tsx  dashboard-stats.tsx  footer.tsx  graduation-request-form.tsx  graduation-requests-table.tsx  header.tsx  hero-section.tsx  login-form.tsx  profile-form.tsx  quick-actions.tsx  recent-activity.tsx  recover-password-form.tsx
frontend/hooks/: use-auth.ts
frontend/lib/: api.ts  graduations.ts
