[project]
name = "fecot-backend"
version = "0.1.0"
description = "Backend da plataforma FECOT - Federação Centro-Oeste de Taekwondo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",  # pinned — 4.1+ quebra compatibilidade com passlib atual

    # Validação CPF/CNPJ (opcional, mas útil)
    "validate-docbr>=1.10.0",

    # Utils
    "python-multipart>=0.0.12",  # uploads (pra futuro)
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "Pillow>=10.4.0",            # processamento de imagens (avatar)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.1",
    "freezegun>=1.5.1",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # linha longa tratada pelo formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: testes unitários puros (sem dependências)",
    "integration: testes de integração (precisam do banco)",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
    "ignore::DeprecationWarning:jose",
    # Deprecation interna do Starlette (HTTP_xxx -> outro nome)
    "ignore:'HTTP_413_REQUEST_ENTITY_TOO_LARGE' is deprecated:DeprecationWarning",
    "ignore:'HTTP_422_UNPROCESSABLE_ENTITY' is deprecated:DeprecationWarning",
    # datetime.utcnow() — corrigir no app eventualmente
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*", "*/scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
